test/libsolidity/syntaxTests/license/license_hidden_unicode.sol
// SPDX-License-Identifier: GPL-3.0 ⡉⡊⡋⡌⡍⡎⡏⡐⡑⡒
contract C {}
// ----
// ParserError 1114: Invalid SPDX license identifier.
